tests/invalid/type/arity_list_push_too_many.pts
function main() : void {
    list<int> xs = [1];
    xs.push(2, 3);
}
